src/css/app.sass
// app global css in Sass form

@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap')

html
  --main-bg-color: #070707
  --font: 'Quicksand', sans-serif

body
  font-size: 1rem
  background-color: var(--main-bg-color)
  color: rgb(126, 216, 255)

.page-column
  max-width: 600px
  width: 100%

#wrapper
  background-color: var(--main-bg-color)
  font-family: var(--font)
  font-size: .6rem
  height: calc(100vh - 50px)
  transition: color 1s linear

#svg-container
  width: 75vw
  transition: color 1s linear

.inner-container
  position:relative

.q-markdown--link
  color: rgb(126, 216, 255) !important
  border-bottom: 1px dashed rgb(126, 216, 255) !important
  white-space: normal !important

.continue__arrow-down
  top: calc(100vh - 150px)
  left: 50%
  transform: translateX(-50%)

.continue__arrow-down-icon
  animation: continue-bounce 2s infinite

@keyframes continue-bounce
  0%, 20%, 50%, 80%, 100%
    transform: translate3d(0, 0, 0)
  40%
    transform: translateY(-30px)
  60%
    transform: translateY(-15px)

